--- a/Private-messenger.html
+++ b/Private-messenger.html
@@ -100,7 +100,7 @@
 						  <a class="dropdown-item" href="Secure-Crypto-Wallet.html">Secure Crypto Wallet</a>
 						  <a class="dropdown-item" href="keygard.html">KeyPass</a>
 						  <a class="dropdown-item" href="Web3-Browser.html">Web3 Browser</a>
-						  <a class="dropdown-item" href="VPN.html">VPN</a>
+						  <a class="dropdown-item" href="DVPN.html">DVPN</a>
 					  </div>
 				  </li>
 				  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
