--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                           <a class="dropdown-item" href="Secure-Crypto-Wallet.html">Secure Crypto Wallet</a>
                           <a class="dropdown-item" href="keygard.html">KeyPass</a>
                           <a class="dropdown-item" href="Web3-Browser.html">Web3 Browser</a>
-                          <a class="dropdown-item" href="VPN.html">VPN</a>
+                          <a class="dropdown-item" href="DVPN.html">DVPN</a>
                       </div>
                   </li>
                   <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
@@ -1548,45 +1548,48 @@ to the people </h4>
     <div class="row">
         <div class="col-md-2">
             <div class="links">
-                <h5 style="font-size: 18.4px;"  class="title animated"  data-animation-delay="0.5s">Useful Links</h5>
-                <ul class="useful-links">
-                    <li class="animated"  data-animation-delay="0.9s"><a href="index.html#roadmap">Roadmap</a></li>
-                    <li class="animated"  data-animation-delay="1.0s"><a href="index.html#team">Team</a></li>
-                    <li class="animated"  data-animation-delay="1.1s"><a href="https://pixinvent.com/demo/crypto-ico-admin/html/ltr/vertical-menu/account-login.html">Sign in</a></li>
+                <h5 style="font-size: 18.4px;"  class="title animated"  data-animation-delay="0.5s">Company</h5>
+                <ul class="useful-links float-left mr-5">
+                    <li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s"><a href="get-involved.html" target="_blank">Team</a></li>
+                    <li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s"><a href="security.html" target="_blank">About Us</a></li>
+                    <li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s"><a href="form.html" target="_blank">Roadmap</a></li>
                 </ul>
         </div>
         </div>
         <div class="col-md-2">
             <div class="links">
-                <h5 style="font-size: 18.4px;"  class="title animated"  data-animation-delay="0.5s">PCNP</h5>
+                <h5 style="font-size: 18.4px;"  class="title animated"  data-animation-delay="0.5s">Features</h5>
                 <ul class="useful-links float-left mr-5">
-                    <li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s"><a href="get-involved.html" target="_blank">Get Involved</a></li>
-                    <li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s"><a href="security.html" target="_blank">About</a></li>
-                    <li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s"><a href="form.html" target="_blank">White Paper</a></li>
-                    <li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s"><a href="form.html" target="_blank">Jobs</a></li>
-                </ul>
-        </div>
-        </div>
-        <div class="col-md-2">
-            <div class="links">
-                <h5 style="font-size: 18.4px;"  class="title animated"  data-animation-delay="0.5s">Product</h5>
-                <ul class="useful-links float-left mr-5">
-                    <li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s"><a href="form.html" target="_blank">Features</a></li>
-                    <li class="animated"  data-animation-delay="0.7s"><a href="security.html">Security</a></li>
-                    <li style="line-height: 25px;" class="animated"  data-animation-delay="0.8s"><a href="form.html">Become an <span>Investor</span> </a></li>
+                    <li style="width: max-content;" class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s"><a href="form.html" target="_blank">Private Messenger</a></li>
+                    <li class="animated"  data-animation-delay="0.7s"><a href="security.html">Crypto Wallet</a></li>
+                    <li style="line-height: 25px;" class="animated"  data-animation-delay="0.8s"><a href="form.html">DVPN</a></li>
+                    <li style="line-height: 25px;" class="animated"  data-animation-delay="0.8s"><a href="form.html">Web3 Browser</a></li>
                 </ul>
         </div>
         </div>
 
+
+        <div class="col-md-2">
+            <div class="links">
+                <h5 style="font-size: 18.4px;"  class="title animated"  data-animation-delay="0.5s">Documantation</h5>
+                <ul class="useful-links float-left mr-5">
+                    <li class="animated"  data-animation-delay="0.6s"><a href="https://keycard.tech/" target="_blank">Whitepaper</a></li>
+                    <li class="animated"  data-animation-delay="0.7s"><a href="https://assemble.fund/" target="_blank">Privacy Policy</a></li>
+                    <li class="animated"  data-animation-delay="0.8s"><a href="">Terms of use</a></li>
+                    <li class="animated"  data-animation-delay="0.7s"><a href="/" target="_blank">FAQ's</a></li>
+                   
+                </ul>
+        </div>
+        </div>
 
         <div class="col-md-2">
             <div class="links">
                 <h5 style="font-size: 18.4px;"  class="title animated"  data-animation-delay="0.5s">PCNP Network</h5>
                 <ul class="useful-links float-left mr-5">
-                    <li class="animated"  data-animation-delay="0.6s"><a href="https://keycard.tech/" target="_blank">Keycard</a></li>
-                    <li class="animated"  data-animation-delay="0.7s"><a href="https://assemble.fund/" target="_blank">Assemble</a></li>
-                    <li class="animated"  data-animation-delay="0.8s"><a href="">Embark</a></li>
-                    <li class="animated"  data-animation-delay="0.7s"><a href="/" target="_blank">Nimbus</a></li>
+                    <li class="animated"  data-animation-delay="0.6s"><a href="https://keycard.tech/" target="_blank">KeyPass</a></li>
+                    <li style="width: max-content;" class="animated"  data-animation-delay="0.7s"><a href="https://assemble.fund/" target="_blank">Account Generation</a></li>
+                    <li class="animated"  data-animation-delay="0.8s"><a href="">Token Sale</a></li>
+                    <li class="animated"  data-animation-delay="0.7s"><a href="/" target="_blank">Security</a></li>
                    
                 </ul>
         </div>
