--- a/index.html
+++ b/index.html
@@ -431,7 +431,8 @@
                     <h2 class="title">Features</strong></h2>
                 </div>  
             </div>    
-            <section style="margin-top: 90px;" id="explore">
+            
+            <!-- <section style="margin-top: 90px;" id="explore">
             <div class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.3s" class="max-w-screen-2xl mx-auto lg:px-12">
                 <div class="grid md:grid-cols-2">
                     <div style="background: linear-gradient(#e66465, #9198e5);" class=" relative">
@@ -462,10 +463,42 @@
                     </div>
                 </div>
             </div>
-             </section>
-            <  !--END-HOME-DECENTRALIZED-PRIVATE-->
+             </section> -->
+            
+
+             <section style="margin-left: 15px;">
+                <div class="max-w-screen-2xl mx-auto lg:px-12">
+                    <div class="grid md:grid-cols-2">
+                        <div style="background: linear-gradient(#e66465, #9198e5);" class="bg-blue-gray-light relative">
+                            <!-- <span class="bg-blue-gray-light w-screen absolute -z-1 right-0 h-full"></span> -->
+                            <div class="h-full px-8 py-32 md:pr-16">
+                                <div class="row">
+                                    <div class="col-md-11 col-lg-10">
+                                        <h3 style="font-size: 35px; color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl title animated" data-animation="fadeInUpShorter" data-animation-delay="0.2s">Truly Private Messaging</h3>
+                                    <p style="color: #fff; font-size: 16px;" class=" mt-6 animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">PCNP uses an open-source, peer-to-peer protocol, and end-to-end encryption to protect your messages from third parties. Keep your private messages private with PCNP.</p>
+                                    <a href="Private-messenger.html" class="btn btn-lg btn-gradient-purple btn-glow mr-4 mb-2 animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="1.7s" style="animation-delay: 1.7s; opacity: 1;">Explore All Features</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="md:-mt-16">
+                            <!-- <span class="bg-black w-screen absolute -z-1 left-0 h-full"></span> -->
+                            <div class="h-full flex flex-col space-between px-8 py-32 md:p-32 text-white">
+                                <div class="flex-1 md:mt-12">
+                                    <p style="font-size: 15px; " class="text-lg 2xl:text-2xl text-gray-300">Borderless Crypto Payments</p>
+                                <h3 style="font-size: 33px;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl mt-4 animated" data-animation="fadeInUpShorter" data-animation-delay="0.2s">Secure Crypto Wallet</h3>
+                                <p style="font-size: 16px;" class="text-lg 2xl:text-xl mt-6 text-gray-300" data-animation="fadeInUpShorter" data-animation-delay="0.5s">Safely send, store and receive cryptocurrencies including ERC20 and ERC721 tokens with the PCNP crypto wallet. Only you hold the keys to your funds. PCNP' intuitive design protects you and your funds from attacks.</p>
+                                <a href="Secure-Crypto-Wallet.html" class="btn btn-lg btn-gradient-purple btn-glow mr-4 mb-2 animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="1.7s" style="animation-delay: 1.7s; opacity: 1;">Explore All Features</a>
+                                </div>
+                                <div class="mt-12 md:-mb-32">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <!--HOME-WALLET-BROWSER-->
-             <section >
+             <section style="margin-left: 15px;" >
                 <div class="max-w-screen-2xl mx-auto lg:px-12 animated" data-animation="fadeInUpShorter" data-animation-delay="0.3s">
                     <div class="grid md:grid-cols-2">
                         <div class="relative md:-mb-16 order-2 md:order-none">
@@ -474,7 +507,7 @@
                                 <div>
                                     <p style="font-size: 15px;" class="text-lg 2xl:text-xl text-gray-300 animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">Own Your Data</p>
                                     <h3 style="font-size: 34px;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl mt-4 animated" data-animation="fadeInUpShorter" data-animation-delay="0.2s">Decentralized Web3 Browser with free VPN service</h3>
-                                    <p style="font-size: 14px;" class="text-lg 2xl:text-xl text-gray-300 mt-4 animated"  data-animation="fadeInUpShorter" data-animation-delay="0.5s">Browse the growing ecosystem of DApps including marketplaces, exchanges, games and social networks. Latest security standards ensure a private browsing experience added by FREE VPN service.</p>
+                                    <p style="font-size: 16px;" class="text-lg 2xl:text-xl text-gray-300 mt-4 animated"  data-animation="fadeInUpShorter" data-animation-delay="0.5s">Browse the growing ecosystem of DApps including marketplaces, exchanges, games and social networks. Latest security standards ensure a private browsing experience added by FREE VPN service.</p>
                                     <a href="Web3-Browser.html" class="btn btn-lg btn-gradient-purple btn-glow mr-4 mb-2 animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="1.7s" style="animation-delay: 1.7s; opacity: 1;">Explore All Features</a>
                                 </div>
                                 <div class="mt-12 md:mt-4 my-auto flex items-center justify-center flex-1">
@@ -487,8 +520,8 @@
                                 <div class="row">
                                     <div class="col-md-11 col-lg-10">
                                         <p style="font-size: 15px; color: black;" class="text-lg 2xl:text-xl animated"  data-animation="fadeInUpShorter" data-animation-delay="0.5s">Retain Your Privacy</p>
-                                        <h3 style="font-size: 40px; color: black;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl mt-4 animated" data-animation="fadeInUpShorter" data-animation-delay="0.2s" >Anonymous Account Generation</h3>
-                                        <p style="font-size: 14px; color: black;" class="text-lg 2xl:text-xl mt-4 animated"  data-animation="fadeInUpShorter" data-animation-delay="0.5s">You will never be asked for a phone number, email address, or bank account when generating a PCNP account. Stay private and selectively reveal yourself to the world with PCNP.</p>
+                                        <h3 style="font-size: 34px; color: black;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl mt-4 animated" data-animation="fadeInUpShorter" data-animation-delay="0.2s" >Anonymous Account Generation</h3>
+                                        <p style="font-size: 16px; color: black;" class="text-lg 2xl:text-xl mt-4 animated"  data-animation="fadeInUpShorter" data-animation-delay="0.5s">You will never be asked for a phone number, email address, or bank account when generating a PCNP account. Stay private and selectively reveal yourself to the world with PCNP.</p>
                                         <ul class="mt-16 mb-20">
                                 <li style="color: black;" class="flex items-center mb-4 text-gray-600 text-xl 2xl:text-4xl font-display font-normal leading-normal"><img src="theme-assets/images/no-phone.svg" class="mr-8 md:w-auto w-16"> <span style="margin-left: 15px;"> No phone number </span></li>
                                 <li style="color: black;" class="flex items-center mb-4 text-gray-600 text-xl 2xl:text-4xl font-display font-normal leading-normal"><img src="theme-assets/images/no-email.svg" class="mr-8 md:w-auto w-16"><span style="margin-left: 15px;"> No email address </span></li>
@@ -1540,9 +1573,10 @@
    
 
 <footer class="footer static-bottom footer-dark footer-custom-class" data-midnight="white">
+    <div id="particles-js2"></div>   
     <div class="container">
     <div class="footer-wrapper">
-         <div id="particles-js2"></div> 
+           <!-- <div id="particles-js2"></div>    -->
         <div class="title animated" data-animation="fadeInUpShorter" data-animation-delay="0.2s">
             <!-- <img style="width: 65px; height: 60px; margin-top: -10px; margin-left: -20px;" src="theme-assets/images/pcnLOGO.svg" srcset="theme-assets/images/pcnLOGO.svg" alt="Logo"> -->
             <object style="width: 65px; height: 60px; margin-bottom: -7px; margin-left: -20px;" data="./theme-assets/images/pcnLOGO.svg" type="image/svg+xml">
