--- a/es/faq.html
+++ b/es/faq.html
@@ -33,7 +33,23 @@
   </head>
   <body class=" 1-column undefined  page-animated svg-wrapper" data-menu-open="hover" data-menu="">
     <!-- Preloader | Comment below code if you don't want preloader-->
- 
+
+    <nav class="vertical-social" style="position: fixed; top: 0px; left: 0px; right: 0px; overflow: hidden; height: 218.8px;"><div class="midnightHeader default" style="position: absolute; overflow: hidden; inset: 0px; transform: translateY(0%) translateZ(0px);"><div class="midnightInner" style="position: absolute; overflow: auto; inset: 0px; transform: translateY(0%) translateZ(0px);">
+        <ul>
+            <li><a href="https://www.facebook.com/PCNProtocol/" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+            <li><a href="https://twitter.com/PcnProtocol" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+            <li><a href="https://www.reddit.com/r/PCNProtocol/" target="_blank"> <i class="fa fa-reddit" aria-hidden="true"></i></a></li>
+            <li><a href="https://www.youtube.com/channel/UCGkShKklTgRovjWVai_w4OQ" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+        </ul>
+    </div></div><div class="midnightHeader white" style="position: absolute; overflow: hidden; inset: 0px; transform: translateY(110%) translateZ(0px);"><div class="midnightInner" style="position: absolute; overflow: auto; inset: 0px; transform: translateY(-110%) translateZ(0px);">
+        <ul>
+            <li><a href="https://www.facebook.com/PCNProtocol/" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+            <li><a href="https://twitter.com/PcnProtocol" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+            <li><a href="https://www.reddit.com/r/PCNProtocol/" target="_blank"> <i class="fa fa-reddit" aria-hidden="true"></i></a></li>
+            <li><a href="https://www.youtube.com/channel/UCGkShKklTgRovjWVai_w4OQ" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+        </ul>
+    </div></div></nav>
+
     <header class="page-header">
         <!-- Horizontal Menu Start-->
         <nav class="main-menu static-top navbar-dark navbar navbar-expand-lg fixed-top mb-1"><div class="container">
@@ -319,23 +335,17 @@
 </footer>
 
 
-     <!-- BEGIN VENDOR JS-->
-     <!-- <script type="text/javascript" src="./src/js/scripts/footerline.js"></script> -->
-     <script src="../src/js/scripts/footerline.js"></script>
-     <script src="../theme-assets/vendors/vendors.min.js"></script>
-     <!-- BEGIN VENDOR JS-->
-     <!-- BEGIN PAGE VENDOR JS-->
-     <script src="../theme-assets/vendors/flipclock/flipclock.min.js"></script>
-     <script src="../theme-assets/vendors/swiper/js/swiper.min.js"></script>
-     <script src="../theme-assets/vendors/particles.min.js"></script>
-     <script src="../theme-assets/vendors/waypoints/jquery.waypoints.min.js"></script>
-     <!-- END PAGE VENDOR JS-->
-     <!-- BEGIN THEME JS-->
-     <script src="../theme-assets/js/theme.js"></script>
-     <script src="../theme-assets/js/sales-notification.js"></script>
-     <!-- END CRYPTO JS-->
-     <!-- BEGIN PAGE LEVEL JS-->
-     <script src="../theme-assets/js/scripts/particles-type1.js"></script>
-     <!-- END PAGE LEVEL JS-->
+<script type="text/javascript" src="../src/js/scripts/footerline.js"></script>   
+<script src="../theme-assets/js/jquery-3.2.1.min.js"></script>
+<script src="../theme-assets/js/animate.js"></script>
+<script src="../js/jquery.waypoints.min.js"></script>
+<script src="../theme-assets/js/jquery.waypoints.min.js"></script>
+<script src="../theme-assets/js/easy-waypoint-animate.js"></script>
+<script src="../theme-assets/vendors/particles.min.js"></script>
+<script src="../theme-assets/vendors/waypoints/jquery.waypoints.min.js"></script>
+<script src="../theme-assets/js/theme.js"></script>
+<script src="../theme-assets/js/scripts/particles-type1.js"></script>
+<script type="text/javascript" src="../js/main.min.js"></script>  
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>       
 </html>
