--- a/pd/index.html
+++ b/pd/index.html
@@ -48,14 +48,21 @@
     <!-- Preloader | Comment below code if you don't want preloader-->
 
 <!--/ Preloader -->
-<nav class="vertical-social">
+<nav class="vertical-social" style="position: fixed; top: 0px; left: 0px; right: 0px; overflow: hidden; height: 218.8px;"><div class="midnightHeader default" style="position: absolute; overflow: hidden; inset: 0px; transform: translateY(0%) translateZ(0px);"><div class="midnightInner" style="position: absolute; overflow: auto; inset: 0px; transform: translateY(0%) translateZ(0px);">
     <ul>
         <li><a href="https://www.facebook.com/PCNProtocol/" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
         <li><a href="https://twitter.com/PcnProtocol" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
         <li><a href="https://www.reddit.com/r/PCNProtocol/" target="_blank"> <i class="fa fa-reddit" aria-hidden="true"></i></a></li>
         <li><a href="https://www.youtube.com/channel/UCGkShKklTgRovjWVai_w4OQ" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
     </ul>
-</nav>
+</div></div><div class="midnightHeader white" style="position: absolute; overflow: hidden; inset: 0px; transform: translateY(110%) translateZ(0px);"><div class="midnightInner" style="position: absolute; overflow: auto; inset: 0px; transform: translateY(-110%) translateZ(0px);">
+    <ul>
+        <li><a href="https://www.facebook.com/PCNProtocol/" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+        <li><a href="https://twitter.com/PcnProtocol" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+        <li><a href="https://www.reddit.com/r/PCNProtocol/" target="_blank"> <i class="fa fa-reddit" aria-hidden="true"></i></a></li>
+        <li><a href="https://www.youtube.com/channel/UCGkShKklTgRovjWVai_w4OQ" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+    </ul>
+</div></div></nav>
     <!-- /////////////////////////////////// HEADER /////////////////////////////////////-->
 
     <!-- Header Start-->
